# Money-Note-zoz

./: bun.lockb  capacitor.config.ts  codemagic.yaml  config.yml  index.html  my-release-key.keystore  package-lock.json  package.json  setup-icons.sh  tailwind.config.ts  vite.config.ts  vite.tauri.config.ts
.circleci/: config.yml
.github/workflows/: build-android.yml
.lovable/: plan.md
public/: manifest.webmanifest
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppHeader.tsx  AppLockGate.tsx  AppShell.tsx  BottomNav.tsx  MemberSheet.tsx  OriginalCreatorBadge.tsx  QRDisplay.tsx  QRScanner.tsx  StartupSplash.tsx  StatusBadge.tsx  VerifiedBadge.tsx
src/components/ui/: switch.tsx
src/hooks/: useIdentity.ts  useIdentityVerification.ts
src/lib/: app-security.ts  crypto.ts  db.ts  device.ts  format.ts  identity.ts  join-session.ts  maintenance.ts  qr-payload.ts  text-codes.ts
src/pages/: AssociationDetail.tsx  AssociationSettings.tsx  Associations.tsx  ConfirmCode.tsx  EnterCode.tsx  History.tsx  Home.tsx  Identity.tsx  Index.tsx  NewAssociation.tsx  NotificationsPending.tsx  PayInstallment.tsx  ScanRouter.tsx  Settings.tsx  Welcome.tsx
