[package]
name = "my-app"
version = "1.0.0"
description = "Android wrapper for the Vite app"
authors = ["you"]
edition = "2021"

[lib]
name = "my_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
